# winecellar

./: .dockerignore  .env.example  .env.op  .env.op.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
assistant/: admin.py  email_pipeline.py  images.py  models.py  schemas.py  sommelier.py  styles.py  tasks.py  urls.py  valuation.py  views.py
assistant/migrations/: 0001_initial.py  0002_menuanalysis.py  0003_distributoremail.py  0004_tasteprofile.py  0005_remove_menuanalysis_occasion_menuanalysis_food_and_more.py  0006_labelscan_vintage.py  0007_prospect.py  0008_valuationrun_vintagevaluation.py
cellar/: admin.py  forms.py  models.py  taste_map.py  urls.py  views.py
cellar/migrations/: 0001_initial.py  0002_vintage_dossier.py  0003_vintage_dossier_error_vintage_dossier_requested_at_and_more.py  0004_bottle_opened_date_alter_bottle_status.py  0005_wine_keeps_open_days.py  0006_wine_style_caption_wine_style_vector.py
config/: settings.py  urls.py
core/: apps.py  context_processors.py  guest.py  middleware.py  models.py
deploy/: Caddyfile  README.md  box.env.op  box.env.op.example  cloud-init.yaml
deploy/backup/: backup.sh  box-backup.service  (+2 more)
docs/: deployment.md  design.md  ideas.md  plan.md  taste_map_plan.md
static/: manifest.webmanifest
templates/: base.html
tests/: test_assistant.py  test_cellar.py  test_email_pipeline.py  test_guest.py  test_prospects.py  test_scaffold.py  test_styles.py  test_taste_map.py  test_valuation.py
(+33 files in other folders)
