[project]
name = "winecellar"
version = "0.1.0"
description = "Personal wine cellar with an AI sommelier"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6",
    "django-environ>=0.12",
    "anthropic>=0.90",
    "pydantic>=2.7",
    "imap-tools>=1.10",
    "pillow>=11",
    "pillow-heif>=1.4.0",
    "gunicorn>=26.0.0",
    "whitenoise>=6.12.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=8",
    "pytest-django>=4.11",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
